@@ -1,7 +1,7 @@
 plugins {
     id 'com.lwohvye.java-conventions'
     id 'extra-java-module-info' // apply my own plugin written in buildSrc
-//    id 'org.springframework.boot'
+    id 'org.springframework.boot'
 }
 
 dependencies {
@@ -42,4 +42,12 @@ extraJavaModuleInfo {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.named("bootBuildImage") {
+    environment = [
+            "BP_JVM_VERSION"              : "19",
+            "BPE_DELIM_JAVA_TOOL_OPTIONS" : " ",
+            "BPE_APPEND_JAVA_TOOL_OPTIONS": "-XX:+UseZGC --enable-preview"
+    ]
 }
